--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.13",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.13",
     "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.13",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "bootstrap": "^5.0.1",
     "firebase": "^7.0 || ^8.0",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
