--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "bootstrap": "^5.0.1",
     "firebase": "^7.0 || ^8.0",
+    "mapbox-gl": "^2.4.1",
     "ng-starrating": "^1.0.20",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.8",
@@ -37,6 +38,7 @@
     "@angular/cli": "~11.2.12",
     "@angular/compiler-cli": "~11.2.13",
     "@types/jasmine": "~3.6.0",
+    "@types/mapbox-gl": "^2.4.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^8.0.0",
